<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.baytag.daniel.proyectof.ContactosActivity">


    <android.support.v7.widget.Toolbar
        android:id="@+id/tB_Cst_contactos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:navigationContentDescription="Contactos"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">


    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/titulo_contactos"
            android:textSize="38sp" />

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rcVw_rcVwCon_contactos"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:scrollbars="vertical"></android.support.v7.widget.RecyclerView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:gravity="center"
        android:orientation="horizontal">

        <info.hoang8f.widget.FButton
            android:id="@+id/btn_insetar_contactos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5sp"
            android:layout_marginRight="10sp"
            android:layout_weight="1"
            android:text="@string/insertar"
            android:textAllCaps="false"
            app:buttonColor="@color/fbutton_color_nephritis"
            app:cornerRadius="10sp"
            app:shadowEnabled="true"
            app:shadowHeight="5sp" />

        <info.hoang8f.widget.FButton
            android:id="@+id/btn_buscar_contactos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="5sp"
            android:layout_weight="1"
            android:text="@string/buscar"
            android:textAllCaps="false"
            app:buttonColor="@color/fbutton_color_asbestos"
            app:cornerRadius="10sp"
            app:shadowEnabled="true"
            app:shadowHeight="5sp" />

    </LinearLayout>
</LinearLayout>
