<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#00ffffff"
    android:layout_margin="30sp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.baytag.daniel.proyectof.NuevoUsuarioActivity">

    <TextView
        android:id="@+id/Titulo"
        android:text="Nuevo Usuario"
        android:textSize="30sp"
        android:gravity="center"
        android:inputType="textPersonName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        />

    <EditText
        android:id="@+id/edTx_NicUsu_NvUsu"
        android:hint="Nick de Ingreso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        app:layout_constraintTop_toBottomOf="@+id/Titulo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="40sp"
        android:layout_marginLeft="40sp"
        android:layout_marginTop="10sp"
        />

    <EditText
        android:id="@+id/edTx_PassUsu_NvUsu"
        android:hint="Contraseña"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edTx_NicUsu_NvUsu"
        android:layout_marginRight="40sp"
        android:layout_marginLeft="40sp"
        android:layout_marginTop="5sp"
        />

    <EditText
        android:id="@+id/edTx_TelUsu_NvUsu"
        android:hint="@string/telefono_usuario"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edTx_PassUsu_NvUsu"
        android:layout_marginRight="40sp"
        android:layout_marginLeft="40sp"
        android:layout_marginTop="5sp"
        />

    <EditText
        android:id="@+id/edTx_CorreoUsu_NvUsu"
        android:hint="@string/email_usuario"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edTx_TelUsu_NvUsu"
        android:layout_marginRight="40sp"
        android:layout_marginLeft="40sp"
        android:layout_marginTop="5sp"
        />

    <EditText
        android:id="@+id/edTx_NomUsu_NvUsu"
        android:hint="@string/nom_usu"
        android:inputType="textPersonName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edTx_CorreoUsu_NvUsu"
        android:layout_marginRight="40sp"
        android:layout_marginLeft="40sp"
        android:layout_marginTop="5sp"
        />

    <Button
        android:id="@+id/btn_Guardar_NvUsu"
        android:text="Guardar"
        android:textAllCaps="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/edTx_NomUsu_NvUsu"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="10sp"
        android:layout_marginLeft="80sp"
        android:layout_marginRight="80sp"
        />



</android.support.constraint.ConstraintLayout>
